Fixed ForYou page spacing issues

--- a/app/globals.css
+++ b/app/globals.css
@@ -554,6 +554,11 @@ button:disabled {
 
 /* FEATURES */
 
+#features {
+  display: flex;
+  justify-content: center;
+}
+
 .features__wrapper {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -702,6 +707,11 @@ button:disabled {
 
 /* NUMBERS */
 
+#numbers {
+  display: flex;
+  justify-content: center;
+}
+
 .numbers {
   background-color: #d7e9ff;
   display: flex;
@@ -750,6 +760,8 @@ button:disabled {
 }
 
 #footer {
+  display: flex;
+  justify-content: center;
   background-color: rgb(241 246 244);
 }
 
